src/fauxton/app/addons/documents/assets/less/documents.less
// Licensed under the Apache License, Version 2.0 (the "License"); you may not
// use this file except in compliance with the License. You may obtain a copy of
// the License at
//
//   http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS, WITHOUT
// WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied. See the
// License for the specific language governing permissions and limitations under
// the License.
/*ALL DOCS TABLE*/
tr.all-docs-item {
  border: none;
  background: transparent;
    .btn-group {
        position: absolute;
        right: 0;
        top: 6px;
    }
}
button.beautify {
	margin-top: 20px;
}

/** used in all_docs_list.html **/
.view {
    table td div {
        position: relative;
    }

    table td div div {
        display: none;
        line-height: 1;
        position: absolute;
        right: 4px;
        top: 4px;
    }

    table td div:hover div a.edits {
        padding-left: 16px;
        padding-right: 16px;
    }

    table td div:hover div {
        display: block;
    }
}

/** used in ddocs_info.html **/
.well {
    .row-fluid {
        margin: 0;
    }
    .row-fluid .row-fluid:last-child .well-item {
        border: none;
    }
    .well-item {
        color: #666;
        font-size: 12px;
        border-bottom: 1px solid #e5e5e5;
        padding: 8px 4px;
        strong {
            font-size: 16px;
        }
    }
}

/** used in view_editor.html **/
.design-doc-group{
    .span3 { margin: 0;}
    #new-ddoc-section {
        margin-top: 10px;
        label{ width: 100px}
        .controls{
            margin-left: 100px;
        }
    }
}

/** used in changes.html **/
#changes-table {

  #changes {
    width: 50%;
  }

  #seq, #deleted {
    width: 5%;
  }
}

